Allow jdk to attach self